<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pacmod3_core</name>
  <version>1.0.0</version>
  <description>Core library for the PACMod3 Drive-by-Wire System</description>
  <maintainer email="jwhitley@autonomoustuff.com">jwhitley</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/astuff/pacmod3_core</url>
  <url type="bugtracker">https://github.com/astuff/pacmod3_core/issues</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend>ros_environment</build_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
